<resources>
    <string name="app_name">Whether</string>

    <string name="home_page">Home</string>
    <string name="fav_page">Favorite</string>
    <string name="setting_page">Setting</string>
    <string name="alerts_page">Alerts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="feels_like">feels like</string>
    <string name="nextDays">Next Days</string>

    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>

    <string name="gps">GPS</string>
    <string name="maps">Map</string>

    <string name="add">Add</string>

    <string name="messages_header">Location Mode</string>
    <string name="temp_unit">Temperature unite and Wind speed</string>
    <string name="language">Language</string>
    <string name="location_title">Location</string>
    <string name="unite_title">unit</string>

    <string name="currentLocation">Current Location</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="event">Event</string>
</resources>