<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_page"/>

    <item
        android:id="@+id/fragment_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/fav_page"/>

    <item
        android:id="@+id/fragment_alert"
        android:enabled="true"
        android:icon="@drawable/ic_alert"
        android:title="@string/alerts_page"/>


    <item
        android:id="@+id/fragment_setting"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting_page"/>

</menu>