<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/unite_title">
        <ListPreference
            app:defaultValue="temp_c"
            app:entries="@array/unit"
            app:entryValues="@array/unit_values"
            app:key="Temp"
            app:title="@string/temp_unit"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language">
        <ListPreference
            app:defaultValue="English"
            app:entries="@array/language"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>